# EasyPost

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  Dockerfile  EPIC.md  PURCHASE_FLOW.md  README.md  anime-general.md  avatar.md  bleach.md  copa.md  couple.md  decision_log.md  docker-compose.yml  docker-entrypoint.sh  env-example  idea.md  lego.md  monster_high.md  package-lock.json  package.json  pokemon.md  rick_morty.md  san_andreas.md  user_history.md
.stitch/: metadata.json
back/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
back/alembic/: env.py
back/app/: config.py  database.py  main.py
back/app/auth/: ROUTES.md  models.py  router.py  schemas.py  service.py  user_router.py
back/app/common/: cache.py  dependencies.py  exceptions.py  utils.py
back/app/firebase/: admin.py  dependencies.py
back/app/generations/: router.py  schemas.py  storage.py
back/app/image_generation/: prompt.py  reference_images.py  router.py  schemas.py  service.py
back/app/image_generation/prompts/: __init__.py  anime_general.py  avatar.py  bleach.py  copa.py  couple.py  lego.py  monster_high.py  pokemon.py  rick_morty.py  san_andreas.py  shared.py
back/app/inventory/: ROUTES.md  response.json  router.py  schemas.py  service.py
back/app/listings/: ROUTES.md  models.py  router.py  schemas.py  service.py
back/app/observability/: middleware.py  models.py
back/app/payment/: ROUTES.md  models.py  router.py  schemas.py  service.py
back/app/pokemon/: cache.py  router.py  schemas.py  service.py
back/app/ratings/: models.py  router.py  schemas.py  service.py
back/app/trade/: ROUTES.md  gift_service.py  models.py  router.py  schemas.py  service.py  state.py
back/app/worker/: ROUTES.md  steam_poller.py
back/docs/superpowers/plans/: 2026-04-27-ratings.md.tasks.json
back/docs/superpowers/specs/: 2026-04-27-payment-processing-errors-design.md  2026-04-27-ratings-design.md
back/storage/user-files/metadata/generations/VTRCeUVVeE1WNVBTanYzaTlmdWs3U0oyWG1pMQ/: 20260601055334_3OT4M4-VCyY.json  20260601062720_fqJNF35jR9w.json  20260602183555_oEpUgcd42rs.json  20260602184605_G42qodVOCD0.json
back/tests/: conftest.py  test_auth.py  test_generations.py  test_health.py  test_image_generation.py  test_pokemon.py
backend/: .env.example  .gitignore  pyproject.toml  walkthrough.md
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  users.py
backend/app/core/: config.py  firebase.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py
backend/tests/: conftest.py  test_auth.py  test_auth_service.py
(+309 files in other folders)
