[project]
name = "trade-api"
version = "0.1.0"
description = "Marketplace P2P de itens Dota 2 com sistema de Escrow"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib>=1.7",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "aiosqlite>=0.20",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8004"
sync = "uv sync"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8004"
seed = "python scripts/seed.py"
test = "pytest -s -x --cov=app -vv"
cov = "pytest --cov=app --cov-report=term-missing"
migrate = "alembic upgrade head"
rev = "alembic revision --autogenerate -m"
