[project]
name = "image-forge-api"
version = "0.1.0"
description = "API de geração de imagens com IA (Image Forge)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "firebase-admin>=6.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.28",
    "ruff>=0.8",
    "taskipy>=1.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8004"
sync = "uv sync"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8004"
test = "pytest -s -x --cov=app -vv"
cov = "pytest --cov=app --cov-report=term-missing"
